# fomo

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
examples/: train_fomo_garlic_conveyer==0.0.12.ipynb  train_fomo_sjsu-all-scenes.ipynb  train_fomo_sjsu-scene-1.ipynb  train_fomo_sjsu.ipynb
fomo/: __init__.py  tasks.py
fomo/config/: __init__.py
fomo/config/datasets/: coco-val-only.yaml  coco.yaml  coco128.yaml  coco5000.yaml  coco8.yaml
fomo/data/: __init__.py  dataset.py  pose_dataset.py  utils.py  yolo_coco_api.py
fomo/export/: __init__.py  quantize.py  tflite.py
fomo/models/: __init__.py
fomo/models/base/: inference.py  model.py
fomo/models/fomo/: __init__.py  dataset.py  loss.py  model.py  nn.py  trainer.py  utils.py
fomo/training/: __init__.py  artifacts.py  autobatch.py  config.py  ddp_spawn.py  distributed.py  scheduler.py  train_config.yaml  trainer.py
fomo/utils/: __init__.py  box_ops.py  download.py  drawing.py  logging.py  predict_args.py  results.py  serialization.py  video.py
fomo/validation/: __init__.py  base.py  config.py  point_validator.py  preprocessors.py
scripts/: convert_keras_mobilenetv2_to_pytorch.py  modal_convert_weights.py
tests/: conftest.py  modal_tests.py
tests/e2e/: __init__.py  conftest.py  test_fomo_export.py  test_fomo_inference.py  test_fomo_training.py  test_rf5_training.py
tests/e2e/configs/: fomo.yaml
tests/smoke/: install_surface.py  run_install_smoke.py
tests/unit/: test_export.py  test_fomo.py
