[project]
name = "fomo-edge-ai"
version = "0.0.12"
description = "FOMO - Lightweight Point Localization models."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Bence Danko", email = "bencejdanko@gmail.com"}
]
dependencies = [
    "numpy>=1.19.0",
    "Pillow>=8.0.0",
    "torch>=1.13.0",
    "torchvision>=0.11.0",
    "PyYAML>=6.0",
    "requests>=2.25.0",
    "opencv-python>=4.11.0.86",
    "scipy>=1.7.0",
    "safetensors>=0.4.0",
    "tqdm>=4.64.0",
    "litert-torch==0.9.1",
    "ai-edge-quantizer-nightly==0.8.0.dev20260602"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/fomo-edge-ai/fomo"
Repository = "https://github.com/fomo-edge-ai/fomo"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
fomo = ["assets/*.jpg"]

[tool.setuptools.packages.find]
include = ["fomo*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-exclude = []

[tool.pytest.ini_options]
addopts = "-m unit"
testpaths = ["tests"]
markers = [
    "unit: fast tests that avoid external weights or large files",
    "e2e: end-to-end tests requiring full model loading and inference",
    "fomo: tests covering the FOMO model family",
    "rf5: RF5 training benchmark tests",
]
